# wattstor-hiring

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
src/: alembic.ini  containers.py  main.py  settings.py
src/api/controllers/: __init__.py  index_controller.py  weather_controller.py
src/api/models/: __init__.py  weather.py
src/db/alembic/: env.py
src/db/alembic/versions/: bc171f131d94_init.py
src/db/models/: weather_model.py
src/db/repositories/: weather_repository.py
src/services/: __init__.py  influx_service.py  meteo_service.py
src/tests/: test_weather_controller.py
